# helical-itn.github.io

./: .gitignore  CNAME  LICENSE  README.md  _quarto.yml  about.html  about.qmd  contact.html  custom.css  index.html  index.qmd  listings.json  projects.html  projects.qmd  pyproject.toml  reports.html  robots.txt  search.json  sitemap.xml
.github/workflows/: deploy.yml
ESRs/: esr1.html  esr10.html  esr11.html  esr12.html  esr13.html  esr14.html  esr15.html  esr2.html  esr3.html  esr4.html  esr5.html  esr6.html  esr7.html  esr8.html  esr9.html
blog/: index.html  index.qmd
blog/posts/: barcelona_meeting.html  esr6_data_example.html
site/: _quarto.yml  about.qmd  contact.qmd  custom.css  index.qmd  projects.qmd  reports.qmd  tables_filter.lua
site/ESRs/: esr1.qmd  esr10.qmd  esr11.qmd  esr12.qmd  esr13.qmd  esr14.qmd  esr15.qmd  esr2.qmd  esr3.qmd  esr4.qmd  esr5.qmd  esr6.qmd  esr7.qmd  esr8.qmd  esr9.qmd
site/assets/supervisor_pictures/: valerie-de-moor.avif
site/blog/: index.qmd
site/blog/posts/: barcelona_meeting.qmd  esr6_data_example.ipynb
site_libs/bootstrap/: bootstrap.min.css
