[tool.poetry]
name = "helical-itn-github-io"
version = "0.1.0"
description = "Website for the HELICAL ITN project"
authors = ["Alejandro Fontal <alejandrofontal92@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "helical_itn"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
